<resources>
    <string name="app_name">P2PSoft</string>
    <string name="action_settings">Settings</string>
    <string name="about_us">版本信息</string>
    <string name="action_center">活动中心</string>
    <string name="help_center">帮助中心</string>
    <string name="phrase_explain">名词解释</string>
    <string name="media_info">媒体资讯</string>
    <string name="login_soon">立即登录</string>
    <string name="default_no_sonic">Load Without Sonic</string>
    <string name="sonic">Load With Sonic</string>
    <string name="sonic_preload">DO Sonic Preload</string>
    <string name="sonic_offline">Load Sonic With Offline Cache</string>
    <string name="sonic_no_eTag">Load Sonic With No ETag</string>
    <string name="reset_clear">Clean Up Cache</string>
    <string name="tencent_vas_team">腾讯增值技术团队出品</string>
    <string name="set_custom_url">设置自定义URL</string>
    <string name="close">关闭</string>
    <string name="http_prefix">http://</string>
    <string name="finish">完成</string>
    <string name="illegal_url">不合法的URL</string>
    <string name="edit">编辑</string>
    <string name="password_title">输入密码</string>
    <string name="demo_info1">1.先安装招财猫v1.1</string>
    <string name="demo_info2">2.将由服务器端生成的差分文件 拷贝至：/sdcard/patchfile.patch </string>
    <string name="demo_info3">3.点击 Start</string>
    <string name="demo_start">Start</string>
    <string name="demo_github">GitHub</string>


    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="contacts_string">Total number of contacts: %1$,d\nFirst contact:<b>%2$s</b></string>
    <string name="contacts_none">No contacts stored on device.</string>
    <string name="contacts_empty">Contacts not loaded.</string>
    <string name="add_contact">Add a contact</string>
    <string name="show_contact">Show first contact</string>
    <string name="contacts_intro">This fragment demonstrates access to the contact database on the device.\n
            Clicking \"Add a contact\" adds a new contact named "__DUMMY ENTRY" directly into the database.\n
    Clicking \"Show first contact\" accesses the contact database to display the name of the first contact.</string>
    <string name="camera_unavailable"><b>Camera could not be opened.</b>\nThis occurs when the camera is not available (for example it is already in use) or if the system has denied access (for example when camera access has been disabled).</string>
    <string name="back">Back</string>
    <string name="show_camera">Show camera preview</string>
    <string name="show_contacts">Show and add contacts</string>
    <string name="show_multi">request multi permission</string>
    <string name="main_introduction">Click the buttons below to show a camera preview or access the contacts database.\nNote that the contacts option is only available on Android M to illustrate the use of optional, M-only permissions that are not requested on lower SDK platforms.</string>
    <string name="permision_available_camera">Camera Permission has been granted. Preview can now be opened.</string>
    <string name="permision_available_contacts">Contacts Permissions have been granted. Contacts screen can now be opened.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
    <string name="permission_contacts_rationale">Contacts permissions are needed to demonstrate access.</string>
    <string name="permission_camera_user_hint">test onRequestPermissionsResult: 没有此权限，无法开启这个功能，请开启权限。请打开照相机权限</string>
    <string name="permission_camera_user_hint1">test shouldShowRequestPermissionRationale: 没有此权限，无法开启这个功能，请开启权限。请打开照相机权限</string>


    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
</resources>
