<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="#fff"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="更多"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/login_register"
            android:paddingTop="5dp"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:textColor="#ff4242"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="登录/注册"/>



    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/catears_line_nocolor"/>


    <LinearLayout
        android:id="@+id/ll_action_center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/more_action_center"
            />


        <TextView
            android:layout_gravity="center_vertical"
            android:textColor="#333"
            android:text="活动中心"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <View
        android:layout_gravity="center_horizontal"
        android:layout_width="370dp"
        android:layout_height="1px"
        android:background="#e5e5e5"
        >
    </View>


    <LinearLayout
        android:id="@+id/ll_helpcenter"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/more_help_center"
            />


        <TextView
            android:layout_gravity="center_vertical"
            android:textColor="#333"
            android:text="@string/help_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <View
        android:layout_gravity="center_horizontal"
        android:layout_width="370dp"
        android:layout_height="1px"
        android:background="#e5e5e5"
        >
    </View>



    <LinearLayout
        android:id="@+id/ll_pharse_explain"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/more_nouns_explain"
            />


        <TextView
            android:layout_gravity="center_vertical"
            android:textColor="#333"
            android:text="@string/phrase_explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <View
        android:layout_gravity="center_horizontal"
        android:layout_width="370dp"
        android:layout_height="1px"
        android:background="#e5e5e5"
        >
    </View>

    <View
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:background="#e5e5e5"
        >
    </View>

    <LinearLayout
        android:id="@+id/ll_media"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/media_coverage"
            />


        <TextView
            android:layout_gravity="center_vertical"
            android:textColor="#333"
            android:text="@string/media_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <View
        android:layout_gravity="center_horizontal"
        android:layout_width="370dp"
        android:layout_height="1px"
        android:background="#e5e5e5"
        >
    </View>

    <LinearLayout
        android:id="@+id/ll_aboutus"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/more_about_us"
            />


        <TextView
            android:layout_gravity="center_vertical"
            android:textColor="#333"
            android:text="@string/about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <View
        android:layout_gravity="center_horizontal"
        android:layout_width="370dp"
        android:layout_height="1px"
        android:background="#e5e5e5"
        >
    </View>




    <Button
        android:id="@+id/btn_login"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="#fff"

        android:background="@drawable/btn_more_login"
        android:text="@string/login_soon"
        />

</LinearLayout>


